--- a/SquareRootCalculator/Views/Shared/_Layout.cshtml
+++ b/SquareRootCalculator/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                          <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="" asp-action="">Calculate</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Calculate" asp-action="Calc">Calculate</a>
                         </li>
                         
                     </ul>
